tests/algorithms/x/Kotlin/ciphers/diffie.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/ciphers/diffie.kt:17:39: error: parameter name expected
fun contains(xs: MutableList<Int>, val: Int): Boolean {
                                      ^
/workspace/mochi/tests/algorithms/x/Kotlin/ciphers/diffie.kt:17:36: error: 'val' on function parameter is not allowed
fun contains(xs: MutableList<Int>, val: Int): Boolean {
                                   ^
/workspace/mochi/tests/algorithms/x/Kotlin/ciphers/diffie.kt:20:24: error: unresolved reference: _val
        if (xs[i]!! == _val) {
                       ^
